# holo

./: .editorconfig  .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
examples/: hulu-scrape_1-season.json  hulu-scrape_multiple_seasons.json  strawpoll_poll_creation.py
season_configs/: spring_2023.yaml  spring_2024.yaml  summer_2024.yaml  winter_2024.yaml
src/: config.py  holo.py  module_batch_create.py  module_create_threads.py  module_edit.py  module_find_episodes.py  module_find_shows.py  module_update_shows.py  reddit.py  submission.py
src/data/: create_tables.sql  database.py  models.py
src/holo/: config.py  holo.py  module_batch_create.py  module_create_threads.py  module_edit.py  module_find_episodes.py  module_find_shows.py  module_update_shows.py  reddit.py  submission.py
src/holo/data/: create_tables.sql  database.py  feeds.py  models.py
src/holo/services/: __init__.py
src/holo/services/info/: anidb.py  anilist.py  animeplanet.py  kitsu.py  myanimelist.py  official.py  subreddit.py
src/holo/services/poll/: polltab.py  strawpoll.py  youpoll.py
src/holo/services/stream/: __init__.py  adultswim.py  anione.py  crunchyroll.py  hidive.py  hulu.py  museasia.py  nyaa.py  youtube.py  youtube_unlisted.py
src/holo/tools/: editor.py
src/services/: __init__.py
src/services/info/: __init__.py  anidb.py  anilist.py  animeplanet.py  kitsu.py  myanimelist.py  official.py  subreddit.py
src/services/poll/: __init__.py  strawpoll.py  youpoll.py
src/services/stream/: __init__.py  adultswim.py  anione.py  crunchyroll.py  hidive.py  hulu.py  museasia.py  nyaa.py  youtube.py  youtube_unlisted.py
src/tools/: editor.py
