[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "TheEnigmaBlade" },
    { name = "bielna" },
    { name = "badspler" },
    { name = "Manitary" },
]
name = "holo"
version = "0.1.5"
description = "Episode discussion bot for /r/anime"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "praw>=7.7.1",
    "beautifulsoup4>=4.12.2",
    "feedparser>=6.0.11",
    "Unidecode>=1.3.8",
    "pygubu>=0.32",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
]


[tool.setuptools]
package-dir = { "" = "src" }

[project.urls]
"Homepage" = "https://github.com/Manitary/holo"

[project.scripts]
holo = "holo.holo:main"
